Fix location banner overflow

--- a/src/css/elements.css
+++ b/src/css/elements.css
@@ -9,8 +9,6 @@ header>alert-banner {
 
 location-banner {
     display: block;
-    margin-left: calc(0px - var(--section-gutters));
-    margin-right: calc(0px - var(--section-gutters));
     background-color: var(--focus);
     color: var(--color-primary);
     text-align: center;
